--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,13 @@ dependencies:
   cupertino_icons: ^1.0.2
   get:
   http:
+  intl:
   connectivity_plus:
+  flutter_background_service:
+  flutter_background_service_ios: ^2.1.0
+  flutter_background_service_android: ^2.0.3
+  device_info_plus: ^3.2.2
+  flutter_secure_storage:
 
 
 dev_dependencies:
